--- a/src/components/Styles/Books.css
+++ b/src/components/Styles/Books.css
@@ -63,3 +63,14 @@
   color: #fff;
   opacity: 0.7;
 }
+
+.noborder {
+  border: none;
+  margin-left: -10px;
+  margin-top: 10px;
+  background: #fff;
+  margin-right: 20px;
+  padding: 5px 10px;
+  border-right: 2px solid #888;
+  cursor: pointer;
+}
