--- a/src/components/Styles/Books.css
+++ b/src/components/Styles/Books.css
@@ -55,13 +55,14 @@
   font-style: italic;
 }
 
-.btn {
+.btn-n {
   background: #0d39e8;
   border: 1px solid #0d39e8;
   padding: 4px 10px;
   margin-top: 5px;
   color: #fff;
   opacity: 0.7;
+  font-size: 14px;
 }
 
 .noborder {
