Add more style for bookStor App

--- a/src/components/Styles/Books.css
+++ b/src/components/Styles/Books.css
@@ -1,8 +1,8 @@
 .book-container {
   width: 90%;
-  border: 1px solid #888;
+  border: 1px solid lightcyan;
   padding: 2%;
-  margin: 30px auto;
+  margin: 20px auto;
   box-shadow: -1px -1px 2px 1px  #888;
   display: flex;
   justify-content: space-between;
@@ -24,14 +24,15 @@
 
 .catagory {
   margin: 0;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 100;
 }
 
 .part-one .title {
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
+  line-height: 1.5;
 }
 
 .author {
@@ -56,11 +57,11 @@
 }
 
 .btn-n {
-  background: #0d39e8;
+  background: #031042;
   border: 1px solid #0d39e8;
   padding: 4px 10px;
   margin-top: 5px;
-  color: #fff;
+  color: rgb(255, 255, 255);
   opacity: 0.7;
   font-size: 14px;
 }
