--- a/src/components/Styles/AddBook.css
+++ b/src/components/Styles/AddBook.css
@@ -12,16 +12,19 @@ form input {
   padding: 6px 10px;
   width: 20%;
   margin-right: 20px;
-  border: rgb(250, 234, 234) 1px solid;
+  border: rgb(146, 168, 236) 1px solid;
   font-size: 18px;
+  margin-bottom: 20px;
 }
-
+form input:focus {
+  outline: none;
+}
 form button {
   padding: 9px 12px;
   width: 20%;
   margin-left: 2%;
   color: #fff;
-  background-color: blue;
+  background-color: rgb(12, 12, 103);
   border: 1px solid blue;
   opacity: 0.8;
 }
