--- a/src/components/Styles/Categories.css
+++ b/src/components/Styles/Categories.css
@@ -13,7 +13,7 @@
 .btn {
   padding: 8px 12px;
   font-size: 18px;
-  background: #0d39e8;
-  border: 1px solid #0d39e8;
+  background: #0290ff;
+  border: 1px solid #0290ff;
   color: #fff;
 }
